--- a/dashboard/templates/releases/_threshold_based.html
+++ b/dashboard/templates/releases/_threshold_based.html
@@ -1,6 +1,6 @@
 {% load get_item from custom_tags %}
 <div class="panel-heading">
-  <h4>At least <span class="text-info">{{ threshold }}%</span> of messages translated in <span class="text-info">{{ languages|length }}</span> languages across all packages in translation platforms.</h4>
+  <h4>At least <span class="text-info">{{ threshold }}%</span> of messages translated in <span class="text-info">{{ languages|length }}</span> languages across all packages in platforms.</h4>
 </div>
 <table class="table table-bordered table-hover">
   <thead>
