--- a/dashboard/templates/releases/_workload_detailed.html
+++ b/dashboard/templates/releases/_workload_detailed.html
@@ -5,8 +5,7 @@
 </script>
 
 <div class="panel-heading">
-  <h3 class="panel-title"></h3>
-  <span class='text-info'>Percentage denotes translations completed for a language across packages</span>
+  <h4>Percentage denotes the translations completed for a language across packages in platforms.</h4>
 </div>
 <div id="table-scroll" class="table-scroll">
   <div class="table-wrap">
