new images in how-to

--- a/dashboard/templates/howto.html
+++ b/dashboard/templates/howto.html
@@ -4,8 +4,8 @@
 <style type="text/css">
     img {
       display: block;
-      max-width:300px;
-      max-height:250px;
+      max-width:400px;
+      max-height:600px;
       width: auto;
       height: auto;
     }
@@ -33,7 +33,7 @@
                         </div>
                         <div class="col-lg-4 col-lg-offset-1 col-sm-5">
                             <hr class="section-heading-spacer">
-                            <img class="img-responsive" src="/static/img/inventory.png" alt="">
+                            <img src="/static/img/inventory.png" alt="">
                         </div>
                     </div>
                 </div>
