--- a/dashboard/templates/releases/_release_map_view.html
+++ b/dashboard/templates/releases/_release_map_view.html
@@ -1,5 +1,6 @@
 
-<h2>Product Release Readiness <small class="text-muted">Based on statistics retrieved from the latest built packages.</small></h2>
+<h2>Product Release Readiness <small class="text-muted" {% if latest_release %} data-toggle="tooltip" title="{{ latest_release.1 }}" {% endif %}>
+    Based on statistics retrieved from the latest built packages.</small></h2>
 <div id="map-container" class="map-container"></div>
 
 <script src="/static/d3/d3.min.js"></script>
