minor ui change

--- a/dashboard/templates/releases/_outofsync_packages.html
+++ b/dashboard/templates/releases/_outofsync_packages.html
@@ -45,7 +45,7 @@
 
     <h5>Out of <span class="text-info">{{ total_packages }}</span> packages,
         <span class="text-danger">{{ outofsync_packages }}</span> need attention.</h5>
-    <a href="{% url 'settings-packages' %}" class="btn btn-default btn-sx">Details</a>
+    <a href="{% url 'settings-packages' %}" class="btn btn-sx">Details</a>
 
     <div  style="padding-top:5%">
     <ul class="list-group">
