hide threshold view

--- a/dashboard/templates/releases/release_view.html
+++ b/dashboard/templates/releases/release_view.html
@@ -58,7 +58,7 @@
       <span class="btn-group" role="group" aria-label="...">
         <button type="button" id="button-combined" class="btn btn-default">Combined</button>
         <button type="button" id="button-detailed" class="btn btn-default">Detailed</button>
-        <button type="button" id="button-threshold" class="btn btn-default">Threshold Based</button>
+        <!--<button type="button" id="button-threshold" class="btn btn-default">Threshold Based</button>-->
         <!--<button type="button" id="button-lang-wise" class="btn btn-default">Language Wise</button>-->
       </span>
       <a href="{{request.META.HTTP_REFERER}}" class="btn btn-default btn-small">Go Back</a>
