--- a/dashboard/templates/packages/_stats_diff.html
+++ b/dashboard/templates/packages/_stats_diff.html
@@ -2,9 +2,9 @@
 {% if stats_diff %}
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Differences <span class="pull-right text-muted">Translation Platform vs Build System</span></h3>
-    <span class="text-info">Languages in <span class="text-danger">red</span> color differ in stats with Translation Platform.
-      <i>So, either push or pull is not latest.</i> Languages in <span class="text-primary">blue</span> could
+    <h4><strong>Differences</strong> <span class="pull-right text-muted">Translation Platform vs Build System</span></h4>
+    <span class="text-info">Languages in <span class="text-danger">red</span> color have some translations to be pulled from Translation Platform.
+      <i>Whereas,</i> languages in <span class="text-primary">blue</span> could
       <b>not</b> make 100% in the build system.</span>
   </div>
   <table class="table table-hover table-bordered" cellspacing="0">
