--- a/dashboard/templates/packages/_tabular_form.html
+++ b/dashboard/templates/packages/_tabular_form.html
@@ -9,7 +9,7 @@
 {% if stats_data %}
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Statistics</h3>
+    <h4><strong>Statistics</strong></h4>
     <span class="text-info">Stats coming from Upstream has AliceBlue background color whereas Downstream has Ivory color, and its transparent for Translation Platforms.</span>
   </div>
   <div id="table-scroll" class="table-scroll">
