--- a/dashboard/templates/packages/_branch_mapping.html
+++ b/dashboard/templates/packages/_branch_mapping.html
@@ -2,8 +2,9 @@
 {% if branch_mapping %}
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Branch Mapping {% if mapping_lastupdated %}<span class="pull-right text-muted">Updated {{ mapping_lastupdated|timesince }} ago</span>{% endif %}</h3>
-    <span class="text-info">This mapping is basis to comparision of statistics.</span>
+    <h4><strong>Branch Mapping</strong> {% if mapping_lastupdated %}<span class="pull-right text-muted">Updated
+      <span class="text-info">{{ mapping_lastupdated|timesince }}</span> ago</span>{% endif %}</h4>
+    <span class="text-info">This mapping is the basis of comparision of statistics.</span>
   </div>
   <table class="table table-hover table-bordered" cellspacing="0">
     <thead>
