--- a/dashboard/templates/packages/_tabular_form.html
+++ b/dashboard/templates/packages/_tabular_form.html
@@ -1,5 +1,5 @@
 <script>
-    var a = "<span>&nbsp;</span><span class='pull-right text-muted'>Stats are based on synced data and percentage is calculated on messages</span>";
+    var a = "<span>&nbsp;</span><span class='pull-right text-info'>Stats are based on sync'd data and percentage is calculated on messages.</span>";
     $("#span-package-desc").html("{{ pkg_desc }}"); $("#div-graph-disclaimer").html(a);
 
     jQuery(document).ready(function() {
@@ -10,7 +10,7 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <h4><strong>Statistics</strong></h4>
-    <span class="text-info">Stats coming from Upstream has AliceBlue background color whereas Downstream has Ivory color, and its transparent for Translation Platforms.</span>
+    <span class="text-info">Stats coming from Upstream has AliceBlue background color whereas Build System has Ivory color, and its transparent for Translation Platform.</span>
   </div>
   <div id="table-scroll" class="table-scroll">
       <div class="table-wrap">
