--- a/dashboard/templates/jobs/_job_form.html
+++ b/dashboard/templates/jobs/_job_form.html
@@ -5,7 +5,7 @@
 </script>
 
 <form role="form" action="" method="post">
-    <div class="row setup-content" id="step-1">
+    <div class="row setup-content" id="step-1" style="min-height: 550px;">
       <div class="col-xs-12 {% if job_template %}col-md-offset-3{% else %}col-md-offset-1{% endif %}">
           <div class="form-group">
             {% if job_templates %}
@@ -13,7 +13,8 @@
               <div class="col-xs-12 col-md-3">
                 <div class="thumbnail">
                   <div class="caption" style="min-height:250px">
-                    <h3>{{ template.job_template_name|capfirst }}
+                    <h3><span class="pficon pficon-template"></span>
+                        {{ template.job_template_name|capfirst }}
                         {% if template.job_template_json %}
                             <small class="pull-right"> YML</small>
                         {% endif %}
@@ -44,7 +45,7 @@
           </div>
         </div>
     </div>
-    <div class="row setup-content" id="step-2">
+    <div class="row setup-content" id="step-2" style="min-height: 550px;">
       <div class="col-xs-4 col-md-offset-4">
         <div class="col-md-12">
           <div class="form-group">
@@ -61,7 +62,7 @@
         </div>
       </div>
     </div>
-    <div class="row setup-content" id="step-3">
+    <div class="row setup-content" id="step-3" style="min-height: 550px;">
       <div class="col-xs-6 col-md-offset-3">
         <div class="col-md-12">
           {% if 'package_name' in job_params %}
@@ -118,7 +119,7 @@
         </div>
       </div>
     </div>
-    <div class="row setup-content" id="step-4">
+    <div class="row setup-content" id="step-4" style="min-height: 550px;">
       <div class="col-xs-12">
         <div class="col-md-12">
           <button class="btn btn-default prevBtn pull-left" type="button">Previous</button>
